# gtest-woes

./: CMakeLists.txt
googletest/googletest/cmake/: internal_utils.cmake
try_this/: CMakeLists.txt  api.cpp  api.hpp  func.cpp  func.hpp  main.cpp  tests.cpp
